Outline ExecutionAnalysis.isImplied(Event, Event) in RelationAnalysis